timescale/tests/ui/fail-missing-params.rs
use timescale::InterpolatedDataTable;

#[derive(InterpolatedDataTable)]
pub struct EstesC6;

fn main() {}
